--- a/index.html
+++ b/index.html
@@ -103,8 +103,16 @@
   <li> chandre very social can make friends with everyone and super caring </li>
   <li>matthew </li>
   <li></li></ul>
-    </section>
+  </section>
+  <h2>lessons</h2>
+
+  <ul>
+    <li>since being at life choices ive learned that your mental state is important. </li>
+    <li>anything is possible if you put your mind to it </li>
+    <li>with the right mindset you are able to accomplish anything</li>
+  </ul>
     <section>
+        <h2>short term goals</h2>
     <ol>
         <li>i would like to become a developer</li>
         <li>i would like to improve my mindset</li>
@@ -112,6 +120,59 @@
         <li>become the best version of myself</li>
         
     </ol>  
+   
+    <form
+    action="https://formspree.io/f/mjvnjbgg"
+    method="POST"
+  >
+    <label>
+       Name:
+      <input type="text" name="name">
+    </label>
+    <br>
+  
+    <label>
+      Surname:
+      <input type="text" name="name">
+    </label>
+    <br>
+  
+    <label>
+      D.O.B
+      <input type="text" >
+    </label>
+  <br>
+  <label>
+      Age:
+      <input type=<"number>
+  
+  </label>
+  <br>
+  
+  <label>
+      Gender:
+      <input type="text">
+  
+  </label>
+  <br>
+  <label>
+      nationality
+      <input type="text" >
+  </label>
+  <br>
+  <label>
+      Ethnicity:
+      <input type="text">
+  
+  </label>
+  <br>
+  <label>
+  Year matriculated
+  <input type="text">
+  
+  </label>
+  
+  </form>
     </section>
 
 </main>
